@@ -63,6 +63,7 @@ Fixed bugs
 - Fixed unfreed solution in concurrent solving
 - Make sure that logicor constraints are enforced/separated if genlogicor is true in cons_indicator.
   Thus, do not change constraints/logicor/sepafreq anymore, but output warning.
+- Fixed assert that assumed infeasibility cannot occur in presol_boundshift.
 
 
 Miscellaneous
